# spaceInvaderTemplate

./: .gitignore  CMakeLists.txt  README.md
src/: game.h  main.cpp  ship.cpp  ship.h
